--- a/scripts/package.json
+++ b/scripts/package.json
@@ -32,13 +32,15 @@
     "lint:type-cov": "tsx ./src/lint/type-cov.ts"
   },
   "dependencies": {
-    "automd": "^0.2.0",
+    "automd": "^0.3.0",
     "consola": "^3.2.3",
     "del": "^7.1.0",
     "dot-prop": "^8.0.2",
     "globby": "^14.0.1",
+    "replace-string": "^4.0.0",
     "rollup": "^4.12.0",
     "scule": "^1.3.0",
+    "slash": "^5.1.0",
     "table": "^6.8.1",
     "terser": "^5.27.1",
     "type-coverage-core": "^2.27.1"
