--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "sideEffects": true,
   "workspaces": [
     "apps/**",
-    "config/**",
+    ".config/**",
     "packages/**",
     "plugins/**",
     "scripts",
@@ -28,17 +28,16 @@
   },
   "scripts": {
     "postinstall": "nr deps:update",
-    "all": "nr deps:update && nr build && nr lint",
+    "all": "nr deps:update && nr build && nr lint && nr test",
     "automd": "nr -C scripts automd",
     "build": "nr clean && turbo run build && nr build:check",
     "clean": "nr -C scripts clean",
     "build:check": "nr -C scripts build:check",
-    "commit": "pnpm i && nr all && better-commits",
+    "commit": "ni && nr all && better-commits",
     "deps:update": "taze -r -w -i -f -l",
     "lint": "turbo run lint && eslint . --fix && nr knip",
-    "knip": "knip -c ./config/knip.config.ts",
+    "knip": "knip -c .config/knip.config.ts",
     "release": "changeset version && npm publish && git push --follow-tags",
-    "lint:type-cov": "nr -C scripts lint:type-cov",
     "test": "turbo run test"
   },
   "devDependencies": {
