--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,6 +52,7 @@
     "npm": ">=8"
   },
   "scripts": {
+    "postinstall": "pnpm exec playwright install",
     "build": "tsx esbuild.config.ts",
     "build:storybook": "storybook build -o dist/storybook",
     "dev": "tsx esbuild.config.ts --watch",
@@ -132,6 +133,7 @@
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.344.0",
+    "playwright": "^1.42.1",
     "serve": "^14.2.1",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
