--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -76,7 +76,6 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
@@ -87,7 +86,9 @@ jobs:
         run: nr test:ci
 
       - name: 🌐 E2E app/web test
-        run: pnpm -C apps/web e2e:test
+        run: |
+          pnpm build
+          pnpm -C apps/web e2e:test
 
       - uses: actions/upload-artifact@v4
         if: always()
