--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -68,13 +68,37 @@ jobs:
       - name: 👕 Lint
         run: nr lint
 
+  e2e_test:
+    runs-on: ${{ matrix.os }}
+    timeout-minutes: 10
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        node_version: [18, 20]
+      fail-fast: false
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+        with:
+          node-version: ${{ matrix.node_version }}
+
+      - name: 🌐 E2E test
+        run: pnpm -C apps/web e2e:test
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: artifacts/e2e/reports
+          retention-days: 30
+
   test:
     runs-on: ${{ matrix.os }}
     timeout-minutes: 10
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node_version: [18]
+        node_version: [18, 20]
       fail-fast: false
     steps:
       - uses: actions/checkout@v3
@@ -85,18 +109,6 @@ jobs:
       - name: 🧪 Unit Test
         run: nr test:ci
 
-      - name: 🌐 E2E app/web test
-        run: |
-          pnpm build
-          pnpm -C apps/web e2e:test
-
-      - uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: artifacts/e2e/reports
-          retention-days: 30
-
       - name: 📚 Storybook build
         run: nr -C packages/ui build:storybook
 
@@ -106,7 +118,7 @@ jobs:
           pnpm -C packages/ui test:storybook:ci
 
   action-timeline:
-    needs: [build, lint, pr, test, trivy_scan, triage]
+    needs: [build, e2e_test, lint, pr, test, trivy_scan, triage]
     runs-on: ubuntu-latest
     steps:
       - uses: Kesin11/actions-timeline@v1
