--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,32 +51,40 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
-      - name: Build
+      - name: 👷 Build
         run: |
           nr -r ci:env-copy
           nr build
           nr -r ci:env-delete
           nr -r build:check
 
-  coverage:
-    runs-on: ubuntu-latest
-    needs: [build]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: ./.github/actions/setup-node
-
-      - name: Coverage
-        run: nr coverage
-
   lint:
     runs-on: ubuntu-latest
-    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
 
-      - name: Lint
+      - name: 👕 Lint
         run: nr lint
+
+  e2e_test:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: ./.github/actions/setup-node
+
+      - name: 👷 Build
+        run: nr build
+
+      - name: 🌐 E2E test
+        run: pnpm -C apps/web e2e:test
+
+      - uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: playwright-report
+          path: artifacts/e2e/reports
+          retention-days: 30
 
   test:
     runs-on: ${{ matrix.os }}
@@ -86,26 +94,25 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         node_version: [18]
       fail-fast: false
-    needs: [build]
     steps:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup-node
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: Unit Test
-        run: nr test
+      - name: 🧪 Unit Test
+        run: nr test:ci
 
-      - name: Storybook build
+      - name: 📚 Storybook build
         run: nr -C packages/ui build:storybook
 
-      - name: Storybook test
+      - name: 🚨 Storybook test
         if: ${{ matrix.os == 'ubuntu-latest' }}
         run: |
           pnpm -C packages/ui test:storybook:ci
 
   action-timeline:
-    needs: [build, lint, pr, test, trivy_scan, triage]
+    needs: [build, e2e_test, lint, pr, test, trivy_scan, triage]
     runs-on: ubuntu-latest
     steps:
       - uses: Kesin11/actions-timeline@v1
