--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
   },
   "scripts": {
     "prepare": "husky",
-    "all": "ni && nr deps:update && nr build && nr lint && nr test",
-    "build": "nr clean && turbo run build && knip && nr -C scripts build:check && nr -r typecheck",
+    "postinstall": "pnpm exec playwright install --with-deps",
+    "all": "ni && nr deps:update && nr lint && nr build && nr test",
+    "build": "nr clean && turbo run build && nr -C scripts build:check",
     "clean": "nr -C scripts clean",
-    "coverage": "vitest run --coverage",
+    "test:ci": "vitest run --coverage",
     "deps:update": "taze -r -w -i -f -l",
-    "lint": "eslint . --fix && nr -C scripts automd",
+    "lint": "eslint . --fix && knip && nr -r typecheck && nr -C scripts automd",
     "release": "changeset version && npm publish && git push --follow-tags",
     "test": "turbo run test"
   },
@@ -43,6 +44,7 @@
     "eslint": "^8.57.0",
     "husky": "^9.0.11",
     "knip": "^5.0.3",
+    "playwright": "^1.42.1",
     "pnpm": "^8.15.4",
     "taze": "^0.13.3",
     "turbo": "^1.12.5",
