--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -52,12 +52,11 @@
     "npm": ">=8"
   },
   "scripts": {
-    "postinstall": "pnpm exec playwright install",
     "build": "tsx esbuild.config.ts",
     "build:storybook": "storybook build -o dist/storybook",
     "dev": "tsx esbuild.config.ts --watch",
     "storybook": "storybook dev -p 6006",
-    "test": "vitest run",
+    "test": "vitest run --typecheck",
     "test:storybook": "test-storybook",
     "test:storybook:ci": "concurrently -k -s first -n \"Serve🔥,Test🧪\" -c \"magenta,blue\" \"nr build:storybook && serve dist/storybook -l 6006\" \"wait-on http://127.0.0.1:6006 && pnpm test:storybook\"",
     "typecheck": "tsc --noEmit"
@@ -133,7 +132,6 @@
     "esbuild": "^0.20.1",
     "globby": "^14.0.1",
     "lucide-react": "0.344.0",
-    "playwright": "^1.42.1",
     "serve": "^14.2.1",
     "storybook": "^7.6.17",
     "storybook-addon-performance": "^0.17.3",
