--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -8,9 +8,10 @@
     "noEmit": false
   },
   "include": [
-    "**/*.ts",
-    "**/*.tsx",
-    "vitest.config.js"
-  ],
-  "exclude": ["**/dist"]
+    "lib/**/*.ts",
+    ".storybook/**/*.ts",
+    "components/**/*.tsx",
+    "registry/**/*.ts",
+    "*.d.ts"
+  ]
 }
